<resources>
    <string name="app_name">MediCare</string>
    <string name="login_button">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create">Create</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_a_user_login">Already a user? Register</string>
    <string name="logo">Logo\n</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="not_a_user_login">Not a user? Login</string>
    <string name="contentDescription">Loading Image</string>
    <string name="clinic_requested">Requested</string>
    <string name="clinic_scheduled">Scheduled</string>
    <string name="clinic_cancelled">Cancelled</string>
    <string name="clinic_header">Clinic</string>
    <string name="clinic_schedule">Schedule an appointment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_appointment">Make New Appointment</string>
    <string name="medical_consultation">Medical Consultation</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="appointment_image_description">Clinic Image</string>
    <string name="hello_appt_fragment">Hello appt fragment</string>
    <string name="hello_cal_fragment">Hello cal fragment</string>
    <string name="appointment_toolbar_header">My Appointments</string>
    <string name="appointment_fab">Add Appointment</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello,</string>
    <string name="male">Male</string>
    <string name="female">Female\n</string>
    <string name="phone">Phone</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="name">Name\n</string>
    <string name="gender">Gender</string>
    <string name="search_hint">Search...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="settings">Settings</string>
    <string name="doctor">Doctor: </string>
    <string name="service">Service: </string>
    <string name="other">Other: </string>
    <string name="appointment_details">Appointment Details</string>
    <string name="patient">Patient: </string>
    <string name="schedule">Schedule</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="date">Date\n</string>
    <string name="time">Time\n</string>
    <string name="others">Others\n</string>
    <string name="location">Location</string>
</resources>