<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/homepage"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="Confirm Appointment"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/selectedLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selectedLocationView"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/selectedService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selectedServiceView"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/selectedDoctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/doctor"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selectedDoctorView"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="187dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/selectedDateView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedDoctor" />

    <TextView
        android:id="@+id/selectedTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/selectedTimeView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedDate" />

    <TextView
        android:id="@+id/others"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/others"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/othersView"
        android:layout_marginTop="24dp" />

    <!-- Views for displaying selected information -->
    <TextView
        android:id="@+id/selectedLocationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="test"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toEndOf="@id/selectedLocation"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/selectedServiceView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="test"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedLocationView"
        app:layout_constraintStart_toEndOf="@id/selectedService"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/selectedDoctorView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="test"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedServiceView"
        app:layout_constraintStart_toEndOf="@id/selectedDoctor"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/selectedDateView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="test"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedDoctorView"
        app:layout_constraintStart_toEndOf="@id/selectedDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/selectedTimeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="test"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedDateView"
        app:layout_constraintStart_toEndOf="@id/selectedTime"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/othersView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="test"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/selectedTimeView"
        app:layout_constraintStart_toEndOf="@id/others"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Confirm Button -->
    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_30"
        android:text="Confirm"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
