<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClinicSetSchedule">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@color/green_30"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/clinic_schedule"
                app:titleTextColor="#ffff" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="215dp"
        android:layout_marginTop="44dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_details_container">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/appointment_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/patient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="64dp"
                android:text="User"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/service"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="Service"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/user" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/service"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/doctor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/doctor"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="Doctor"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/service" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/other"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/other"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="Other"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/doctor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="Select Date"
        app:layout_constraintBottom_toTopOf="@+id/spinnerDay"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="Select Time"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTime"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDay" />

    <Spinner
        android:id="@+id/spinnerDay"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/button"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:text="@string/schedule"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTime"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>